tests/neg-custom-args/captures/i23726.check
-- Error: tests/neg-custom-args/captures/i23726.scala:11:5 -------------------------------------------------------------
11 |  f1(a)  // error, as expected
   |     ^
   |Separation failure: argument of type  (a : Ref^)
   |to a function of type (x: Ref^) -> List[() ->{a, x} Unit]
   |corresponds to capture-polymorphic formal parameter x of type  Ref^²
   |and hides capabilities  {a}.
   |Some of these overlap with the captures of the function result with type  List[() ->{a} Unit].
   |
   |  Hidden set of current argument        : {a}
   |  Hidden footprint of current argument  : {a}
   |  Capture set of function result        : {a}
   |  Footprint set of function result      : {a}
   |  The two sets overlap at               : {a}
   |
   |where:    ^  refers to a root capability classified as Unscoped in the type of value a
   |          ^² refers to a root capability classified as Unscoped created in method test1 when checking argument to parameter x of method apply
-- Error: tests/neg-custom-args/captures/i23726.scala:16:5 -------------------------------------------------------------
16 |  f3(b)  // error
   |     ^
   |Separation failure: argument of type  (b : Ref^)
   |to a function of type (x: Ref^) -> (op: () ->{b} Unit) -> List[() ->{op} Unit]
   |corresponds to capture-polymorphic formal parameter x of type  Ref^²
   |and hides capabilities  {b}.
   |Some of these overlap with the captures of the function result with type  (op: () ->{b} Unit) -> List[() ->{op} Unit].
   |
   |  Hidden set of current argument        : {b}
   |  Hidden footprint of current argument  : {b}
   |  Capture set of function result        : {op}
   |  Footprint set of function result      : {op, b}
   |  The two sets overlap at               : {b}
   |
   |where:    ^  refers to a root capability classified as Unscoped in the type of value b
   |          ^² refers to a root capability classified as Unscoped created in method test1 when checking argument to parameter x of method apply
-- Error: tests/neg-custom-args/captures/i23726.scala:24:5 -------------------------------------------------------------
24 |  f7(a)  // error
   |     ^
   |Separation failure: argument of type  (a : Ref^)
   |to a function of type (x: Ref^) ->{a, b} (y: List[Ref^{a, b}]) ->{a, b} Unit
   |corresponds to capture-polymorphic formal parameter x of type  Ref^²
   |and hides capabilities  {a}.
   |Some of these overlap with the captures of the function prefix.
   |
   |  Hidden set of current argument        : {a}
   |  Hidden footprint of current argument  : {a}
   |  Capture set of function prefix        : {f7*}
   |  Footprint set of function prefix      : {f7*, a, b}
   |  The two sets overlap at               : {a}
   |
   |where:    ^  refers to a root capability classified as Unscoped in the type of value a
   |          ^² refers to a root capability classified as Unscoped created in method test1 when checking argument to parameter x of method apply
